--- a/docker-compose.confluent.yaml
+++ b/docker-compose.confluent.yaml
@@ -80,7 +80,7 @@ services:
 #      CONNECT_PLUGIN_PATH: "/usr/share/java,/usr/share/confluent-hub-components"
 #      CONNECT_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.I0Itec.zkclient=ERROR,org.reflections=ERROR
   control-center:
-    image: confluentinc/cp-enterprise-control-center:7.6.0
+    image: confluentinc/cp-enterprise-control-center:7.6.0 #TODO: Reports as being outdated?
     hostname: control-center
     container_name: control-center
     networks:
