--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <java.version>21</java.version>
         <avro.version>1.11.3</avro.version>
         <confluent.version>7.6.0</confluent.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
     <!--necessary to resolve confluent dependencies-->
     <repositories>
