--- a/exercises/exercise3/docker-compose.yaml
+++ b/exercises/exercise3/docker-compose.yaml
@@ -76,6 +76,7 @@ services:
     depends_on:
       - broker
       - schema-registry
+      - postgresql
     ports:
       - "8083:8083"
     environment:
