feat: the process for the dotnet sample is finished, exercise 6

--- a/exercises/exercise6/dotnet/Transformer-Finished/Transformer/Transformer.csproj
+++ b/exercises/exercise6/dotnet/Transformer-Finished/Transformer/Transformer.csproj
@@ -19,4 +19,8 @@
         <Link>.dockerignore</Link>
       </Content>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Models\Generated\" />
+    </ItemGroup>
 </Project>
