wip: added the new application to show the customer information near real-time, exercise 6

--- a/exercises/exercise6/docker-compose.yaml
+++ b/exercises/exercise6/docker-compose.yaml
@@ -150,3 +150,11 @@ services:
       PORT: 9021
     networks:
       - kafka_network
+
+  mongodb:
+    image: mongodb/mongodb-community-server:latest
+    container_name: mongodb
+    ports:
+      - "27017:27017"
+    networks:
+      - kafka_network
