--- a/exercises/exercise6/microservice/WorkshopManagement/CustomerManagement.Backend/appsettings.Development.json
+++ b/exercises/exercise6/microservice/WorkshopManagement/CustomerManagement.Backend/appsettings.Development.json
@@ -10,5 +10,11 @@
     "ConnectionString" : "mongodb://localhost:27017",
     "DatabaseName" : "WorkshopManagement",
     "CustomersCollectionName" : "Customers"
+  },
+  "Kafka": {
+    "GroupId": "management-backend",
+    "Brokers" : ["localhost:9092"],
+    "SchemaRegistryUrl": "localhost:8081",
+    "TransformerTopic": "customer-transformed-topic"
   }
 }
