--- a/exercises/exercise4/docker-compose.yaml
+++ b/exercises/exercise4/docker-compose.yaml
@@ -129,7 +129,7 @@ services:
       - kafka_network
   
   control-center:
-    image: confluentinc/cp-enterprise-control-center:7.6.1 #TODO: Reports as being outdated?
+    image: confluentinc/cp-enterprise-control-center:7.6.1
     hostname: control-center
     container_name: control-center
     depends_on:
