--- a/exercises/exercise5/docker-compose.yaml
+++ b/exercises/exercise5/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
       - "9101:9101"
     environment:
       KAFKA_NODE_ID: 1
-      KAFKA_AUTO_CREATE_TOPICS_ENABLED: "false" # if a topic does not exists, what should the kafka do, if true it will create a single-partition topic
+      KAFKA_AUTO_CREATE_TOPICS_ENABLED: "false" # what should the kafka do if a topic does not exist. If true it will create a single-partition topic
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT'
       KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092' # endpoints that clients should use to communicate with kafka
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
