--- a/exercises/exercise5/java/streaming-app-finished/pom.xml
+++ b/exercises/exercise5/java/streaming-app-finished/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.squer</groupId>
-    <artifactId>streaming-app</artifactId>
+    <artifactId>streaming-app-finished</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
